Figure tag styling fixes image alignment. Finally.

--- a/src/styles/site.css
+++ b/src/styles/site.css
@@ -16,3 +16,7 @@
 .alignleft > img {
     float: left;
 }
+
+figure {
+    margin-left: 0;
+  }
